Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ steps:
   displayName: 'Install prerequisites'
 
 - script: |
-    python gatherup/manage.py test
+    python manage.py test
   displayName: 'Run tests'
 
 - task: PublishTestResults@2
